--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-      <img id="img1" src="assets/captain America.jpeg" alt="captain America">
+      <img id="img1" src="captain America.jpeg" alt="captain America">
        <h1>Happy Birthday Steve Rogers</h1>
        <h2>12.10.2010</h2>
         <p>
