--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>HBD</title>
+
+        <link href="logo.png" rel="icon">
+        <link href="logo.png" rel="apple-touch-icon">
 </head>
 <body>
     <div class="header">
